# stayawake

./: Cargo.toml  README.md  build.rs  stayawake.exe.manifest  stayawake.rc
src/: main.rs
