[package]
name = "stayawake"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1

[dependencies]

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]
